	* Configure script rewritten, now understands standard variables and options for installation paths and (cross-)compilation settings
	* Minimum required GTK+2 version now can be specified as configure option (e.g., "./configure gtk2.8")
	* Workaround for bug in GTK+ versions 2.14.0 - 2.14.2, 2.16.0, 2.16.1 added (spin buttons had wrong max values)
	* BUGFIX - Problems with editing large images at high zoom levels are now eliminated
	* BUGFIX - Titlebar now displays new image's filename after loading layers file, as it should
	* BUGFIX - Layers list now correctly displays selected layer after loading layers file
	* BUGFIX - Layers window now correctly displays transparent colour after it has been modified elsewhere
	* BUGFIX - Other layers shown on canvas are now redrawn properly when current layer is moved
	* BUGFIX - Loading TIFF files with X or Y mirroring doesn't cause crash
	* BUGFIX - Planar TIFF files with alpha now load properly
	* BUGFIX - Transparency in indexed TGA files is now read properly
	* BUGFIX - Failed operations now do not flag image as modified
	* BUGFIX - Gradient colours are now properly updated after converting indexed image to RGB
	* BUGFIX - Cut operation in gradient mode when no placement exists now draws shapeburst gradient as it should
	* BUGFIX - Builtin file selector now properly handles manual edits in directory box
	* BUGFIX - Problem with FreeType text dialog occasionally hiding behind main window is now eliminated
	* BUGFIX - FreeType text renderer now can handle PCF bitmap fonts
	* BUGFIX - FreeType text renderer now properly handles TTF fonts with embedded bitmaps
	* BUGFIX - FreeType text renderer now doesn't mistake some Unicode fonts for non-Unicode
	* BUGFIX - Redraw lag when moving a dialog over main window in Windows is now greatly reduced (fixed in GTK+)
	* BUGFIX - Ctrl+T key now draws selection outline as it should - keyboard shortcut for text tool is now Shift+T